# PyHardLinkBackup

./: .coveragerc  .coveralls.yml  .editorconfig  .flake8  .gitignore  .isort.cfg  .noserc  .pre-commit-config.yaml  .travis.yml  AUTHORS.txt  MANIFEST.in  Makefile  README.creole  README.md  README.rst  appveyor.yml  boot_pyhardlinkbackup.cmd  boot_pyhardlinkbackup.sh  cli.py  create_dev_env.sh  dev-cli.py  noxfile.py  proof_of_concept.py  pyproject.toml  pytest.ini  reset_db.sh  setup.py  tox.ini
.github/workflows/: pythonapp.yml  tests.yml
.run/: Template Python tests.run.xml  Unittests - __all__.run.xml  cli.py --help.run.xml  dev-cli update.run.xml  only DocTests.run.xml  only DocWrite.run.xml
PyHardLinkBackup/: __init__.py  __main__.py  backup.py  compare_backup.py  constants.py  human.py  logging_setup.py  manage.py  phlb_cli.py  proof_of_concept.py  rebuild_databases.py
PyHardLinkBackup/DjangoHardLinkBackup/: admin.py  settings.py  urls.py  wsgi.py
PyHardLinkBackup/backup_app/: admin.py  middleware.py  models.py  tests.py  views.py
PyHardLinkBackup/backup_app/migrations/: 0001_initial.py  0002_backupentry_no_link_source.py  0003_auto_20160127_2002.py  0004_BackupRun_ini_file_20160203_1415.py  0005_auto_20160627_1439.py
PyHardLinkBackup/cli_app/: __init__.py  benchmark.py  phlb.py
PyHardLinkBackup/cli_dev/: __init__.py  __main__.py  benchmark.py  code_style.py  debugging.py  packaging.py  shell_completion.py  testing.py  update_readme_history.py
PyHardLinkBackup/django_project/: manage.py  settings.py  urls.py  wsgi.py
PyHardLinkBackup/helper_cmd/: PyHardLinkBackup this directory.cmd  PyHardLinkBackup_this_directory.cmd  cmd_shell.cmd  phlb_edit_config.cmd  phlb_migrate_database.cmd  phlb_run_django_webserver.cmd  phlb_run_tests.cmd  phlb_run_unittests.cmd  phlb_upgrade_PyHardLinkBackup.cmd
PyHardLinkBackup/helper_sh/: PyHardLinkBackup this directory.sh  phlb_edit_config.sh  phlb_migrate_database.sh  phlb_run_django_webserver.sh  phlb_run_tests.sh  phlb_upgrade_PyHardLinkBackup.sh
PyHardLinkBackup/phlb/: __init__.py  add.py  backup.py  config.py  config_defaults.ini  config_defaults.py  deduplicate.py  filesystem_walk.py  human.py  humanize.py  main.py  os_scandir.py  path_helper.py  pathlib2.py  phlb_main.py  publish.py  summary_file.py  traceback_plus.py  verify.py
PyHardLinkBackup/requirements/: dev_extras.txt  normal_installation.txt
PyHardLinkBackup/tests/: __init__.py  base.py  test_add.py  test_backup.py  test_cli.py  test_compare_backup.py  test_config.py  test_doc_write.py  test_doctests.py  test_human.py  test_pathlib2.py  test_project_setup.py  test_readme.py  test_readme_history.py  test_rebuild_database.py  test_unittest_setup.py  test_verify.py  test_windows.py  utils.py
PyHardLinkBackup/utilities/: file_hash_database.py  file_size_database.py  filesystem.py  humanize.py  rich_utils.py  sha256sums.py  tee.py  tyro_cli_shared_args.py
PyHardLinkBackup/utilities/tests/: base_testcases.py  test_file_hash_database.py  test_file_size_database.py  test_filesystem.py  unittest_utilities.py
dev/: WindowsDevelopment.creole  patch_cmd.py
docs/: README.md  about-docs.md
pyhardlinkbackup/: __init__.py  phlb_cli.py
pyhardlinkbackup/backup_app/: admin.py  context_processors.py  middleware.py  models.py  tests.py  views.py
pyhardlinkbackup/backup_app/migrations/: 0001_initial.py  0002_backupentry_no_link_source.py  0003_auto_20160127_2002.py  (+2 more)
pyhardlinkbackup/django_project/: manage.py  settings.py  urls.py  wsgi.py
pyhardlinkbackup/helper_cmd/: PyHardLinkBackup_this_directory.cmd  cmd_shell.cmd  phlb_edit_config.cmd  phlb_migrate_database.cmd  phlb_run_django_webserver.cmd  phlb_run_tests.cmd  phlb_upgrade_PyHardLinkBackup.cmd
pyhardlinkbackup/helper_sh/: PyHardLinkBackup_this_directory.sh  phlb_edit_config.sh  phlb_migrate_database.sh  phlb_run_django_webserver.sh  phlb_run_tests.sh  phlb_upgrade_PyHardLinkBackup.sh
pyhardlinkbackup/phlb/: __init__.py  add.py  backup.py  cli.py  config.py  config_defaults.ini  deduplicate.py  exceptions.py  filesystem_walk.py  humanize.py  main.py  path_helper.py  publish.py  summary_file.py  traceback_plus.py  verify.py
pyhardlinkbackup/tests/: base.py  mock_datetime.py  test_add.py  test_backup.py  test_cli.py  test_config.py  test_django_setup.py  test_human.py  test_project_meta.py  test_project_setup.py  test_unittest_setup.py  test_verify.py  utils.py
requirements/: dev_extras.txt
(+5 files in other folders)
